<resources>
    <string name="app_name">Endless Entertainment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="flickr">Flickr</string>
    <string name="ticketshop">Ticketshop</string>
    <string name="kontakt">Kontakt</string>
</resources>
